--- a/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader.csproj
+++ b/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Xam.Views.Loader.Portable\Xam.Views.Loader.Portable.csproj" />
+  </ItemGroup>
 </Project>
